# chassis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
chassis/: Cargo.toml  README.md
chassis/examples/: static_greeter.rs
chassis/src/: arguments.rs  attributes.rs  container.rs  diagnostic.rs  errors.rs  key.rs  lib.rs  model.rs  parse.rs  utils.rs
chassis/src/codegen/: context.rs  generator.rs  mod.rs  singletons.rs
chassis/src/parse/: arguments.rs  attributes.rs  mod.rs  signature.rs
chassis/tests/: deps.rs  multiple_components.rs  multiple_modules.rs  no_dep.rs  singleton.rs  singleton_deps.rs  version-numbers.rs
chassis/tests/failing/: comp_cyclic_dep.rs  comp_cyclic_dep.stderr  comp_cyclic_dep2.rs  comp_cyclic_dep2.stderr  comp_default_impl.rs  comp_default_impl.stderr  comp_no_default_impl.stderr  comp_no_return_type.rs  comp_no_return_type.stderr  comp_no_self_ref.rs  comp_no_self_ref.stderr  comp_no_type_item.rs  comp_no_type_item.stderr  comp_type_item.stderr  missing_dep.rs  missing_dep.stderr  module_multiple_same_provider.rs  module_multiple_same_provider.stderr  module_no_return_type.rs  module_no_return_type.stderr
dyn-chassis/: Cargo.toml
dyn-chassis/examples/: dd_clone.rs  greeter.rs
dyn-chassis/src/: errors.rs  factory.rs  helper.rs  key.rs  lib.rs  resolve.rs
dyn-chassis/src/bind/: annotation.rs  linker.rs
dyn-chassis/src/config/: injection_point.rs  mod.rs
dyn-chassis/src/inject/: mod.rs
dyn-chassis/tests/: delegating.rs
dyn-proc-macros/: Cargo.toml  README.md
dyn-proc-macros/src/: diagnostic.rs  inject.rs  module.rs  signature.rs
dyn-proc-macros/tests/: inject_class_chain.rs  inject_class_various_wrapper.rs  inject_module.rs  inject_module_with_annotation.rs  inject_module_with_traits.rs  inject_module_with_wrappers.rs  inject_nodep_class.rs  module_user_configure.rs
examples/: dd_clone.rs
lib/: Cargo.toml  build.rs
lib/examples/: dd_clone.rs  greeter.rs  static_greeter.rs
lib/src/: binder.rs  debug.rs  errors.rs  factory.rs  helper.rs  injector.rs  key.rs  lib.rs  loader.rs  module.rs  provider.rs  resolve.rs  scope.rs  service_locator.rs  singleton.rs
lib/src/bind/: binder.rs  binding.rs  linker.rs  mod.rs
lib/src/config/: dependency.rs  injection_point.rs  module.rs
lib/src/inject/: builder.rs  context.rs  mod.rs
lib/src/injector/: builder.rs  context.rs  mod.rs
lib/tests/: delegating.rs
proc_macros/: Cargo.toml
proc_macros/src/: attributes.rs  diagnostic.rs  inject.rs  lib.rs  module.rs  sig.rs  signature.rs  syn_ext.rs  utils.rs
proc_macros/src/compiled/: arguments.rs  container.rs  mod.rs
proc_macros/tests/: inject_class_chain.rs  inject_class_various_wrapper.rs  inject_module.rs  inject_module_with_annotation.rs  inject_module_with_traits.rs  inject_module_with_wrappers.rs  inject_nodep_class.rs  module_user_configure.rs
src/: errors.rs  factory.rs  lib.rs  loader.rs  module.rs  resolve.rs  scope.rs  service_locator.rs
