[package]
name = "chassis"
version = "0.2.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Compile-time dependency injection framework"
repository = "https://github.com/R1tschY/chassis"
readme = "README.md"
keywords = ["dependency-injection", "inversion-of-control", "di"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
assert_matches = "1.3"
trybuild = "^1.0.32"
version-sync = "0.9"

[build-dependencies]
version_check = "0.9"