[package]
name = "chassis-proc-macros"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"