[package]
name = "chassis-proc-macros"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Procedural macros for Chassis dependency injection framework"
repository = "https://github.com/R1tschY/chassis"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
chassis = { path = "../lib" }
assert_matches = "1.3"

[build-dependencies]
version_check = "0.9"